--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  firebase_core: ^1.3.0
+  firebase_auth: ^1.4.1
+  firebase_database: ^7.1.1
+  fluttertoast: ^8.0.7
   http: ^0.13.3
   provider:
+
 
 
  
@@ -53,6 +59,16 @@ flutter:
    - assets/images/logo.png
    - assets/images/background.jpg
    - assets/images/logoLianna.png
+   - assets/images/car_android.png
+   - assets/images/car_ios.png
+   - assets/images/desticon.png
+   - assets/images/desticon1.png
+   - assets/images/logo1.png
+   - assets/images/pickicon.png
+   - assets/images/posimarker.png
+   - assets/images/redmarker.png
+   - assets/images/user_icon.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -65,10 +81,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+     - family: signatra
+       fonts:
+         - asset: assets/fonts/Signatra.ttf
+     - family: Brand-Regular
+       fonts:
+         - asset: assets/fonts/bolt-regular.ttf
+     - family: Brand-Bold
+       fonts:
+         - asset: assets/fonts/bolt-semibold.ttf          
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
